--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <i class="fa-solid fa-play"></i>
         </button>
         <button class="btn" id="stop">
-            <i class="fa-solid fa-pause"></i>
+            <i class="fa-solid fa-stop"></i>
         </button>
         <input type="range" name="" id="progress" class="progress" min="0" max="0" step="0.1" value="0">
         <span class="timestamp" id="timestamp">00:00</span>
@@ -27,3 +27,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Video_and_audio_APIs -->
