--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button class="btn" id="stop">
             <i class="fa-solid fa-stop"></i>
         </button>
-        <input type="range" name="" id="progress" class="progress" min="0" max="0" step="0.1" value="0">
+        <input type="range" id="progress" class="progress" min="0" max="100" step="0.1" value="0">
         <span class="timestamp" id="timestamp">00:00</span>
     </div>
 
